--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 body{
   margin: 0;
   padding: 0;
-  font-family: "DM Sans", sans-serif;
+  font-family: "Gilroy";
   overflow-x: hidden;
   border: none;
 }
@@ -15,6 +15,10 @@ body{
   justify-content: center;
   align-items: center;
   font-size: 12px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 .carouselcircle{
   width: 8px;
@@ -28,6 +32,10 @@ body{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  top: 25px;
+  left: 0;
+  right: 0;
 }
 .logo{
   width: 60px;
@@ -36,4 +44,43 @@ body{
 .menu{
   width: 25px;
   margin-right: 20px;
+}
+
+.bottombar{
+  width: calc(90%-16px);
+  height: 45px;
+  background-color: #161616;
+  position: fixed;
+  bottom: 20px;
+  left: 5%;
+  right: 5%;
+  border-radius: 40px;
+  padding: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.tab{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 12px;
+  padding-right: 12px;
+  border-radius: 40px;
+  height: 100%;
+}
+.active{
+  border: 1.5px solid royalblue;
+  background-color: rgba(65, 105, 225, 0.093);
+}
+.tabicon{
+  width: 16px;
+}
+.tabtag{
+  color: white;
+  font-weight: 600;
+  margin-top: 2px;
+  font-size: 12px;
+  margin-left: 6px;
+  margin-right: 6px;
 }
