--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 body{
   margin: 0;
   padding: 0;
@@ -36,6 +35,7 @@ body{
   top: 25px;
   left: 0;
   right: 0;
+  background-color: white;
 }
 .logo{
   width: 60px;
@@ -45,21 +45,6 @@ body{
   width: 25px;
   margin-right: 20px;
 }
-
-/* .bottombar{
-  width: max-content;
-  height: 45px;
-  background-color: #161616;
-  position: fixed;
-  bottom: 20px;
-  left: 0;
-  right: 0;
-  border-radius: 40px;
-  padding: 8px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-} */
 .bottombar {
   width: max-content;
   max-width: 400px;
@@ -84,6 +69,7 @@ body{
   height: 100%;
   padding-left: 12px;
   padding-right: 12px;
+  cursor: pointer;
 }
 .active{
   transition: 0.3s linear;
@@ -100,4 +86,19 @@ body{
   font-size: 10px;
   margin-left: 6px;
   margin-right: 6px;
+}
+.homescreen{
+  background-color: royalblue;
+  height: 100vh;
+  width: 100%;
+}
+.updateprice{
+  background-color: blue;
+  height: 100vh;
+  width: 100%;
+}
+.additem{
+  background-color: greenyellow;
+  height: 100vh;
+  width: 100%;
 }
