--- a/src/App.css
+++ b/src/App.css
@@ -122,12 +122,10 @@ body{
   margin-left: 4px;
 }
 .category{
-  height: fit-content;
+  height: 30px;
   width: max-content;
-  padding-right: 8px;
-  padding-top: 4px;
-  padding-bottom: 4px;
-  padding-left: 8px;
+  padding-right: 12px;
+  padding-left: 12px;
   border: 2px solid rgb(73, 73, 73);
   border-radius: 40px;
   margin-left: 4px;
