--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,7 @@ body{
   width: 100%;
 }
 .categoriesdiv{
-  width: 100%;
+  width: calc(100% - 12px);
   height: 40px;
   overflow-x: auto;
   display: flex;
@@ -137,7 +137,102 @@ body{
   align-items: center;
 }
 .activecategory{
-  border: 2px solid #161616;
-  background-color: #161616;
+  border: 2px solid royalblue;
+  background-color: royalblue;
   color: white;
+}
+
+.itemdiv{
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-bottom: 40px;
+  padding-top: 20px;
+}
+.itemcard{
+  width: 90%;
+  height: 120px;
+  border-radius: 20px;
+  background-color: rgb(251, 251, 251);
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  overflow: hidden;
+}
+.itemimage{
+  width: 120px;
+  height: 120px;
+  border-radius: 20px 0 0 20px;
+}
+.searchbar{
+  width: 100%;
+  height: 45px;
+  margin-bottom: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.searchinp{
+  width: 70%;
+  height: 90%;
+  outline: none;
+  border: none;
+  font-size: 14px;
+  font-weight: 600;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  color: #161616;
+  background-color: rgb(249, 249, 249);
+  border-radius: 8px;
+}
+.searchinp::placeholder{
+  color: grey;
+  font-weight: 600;
+  font-size: 14px;
+}
+.searchicon{
+  width: 16px;
+  margin-right: 12px;
+}
+.iteminfo{
+  flex: 1;
+  height: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: column;
+}
+.first{
+  width: 95%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 12px;
+}
+.delete,.edit{
+  width: 16px;
+  margin: 4px;
+}
+.code{
+  font-size: 14px;
+  font-weight: 600;
+  color: grey;
+  margin-left: 8px;
+}
+.cardbuttonstop{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.second{
+  width: calc(100% - 8px);
+  margin-left: 8px;
+  font-size: 14px;
+  font-weight: 600;
+  margin-top: 0px;
 }
