--- a/src/App.css
+++ b/src/App.css
@@ -101,3 +101,14 @@ body{
   align-items: start;
   flex-direction: column;
 }
+
+.updateprice{
+  width: 100%;
+  height: 100vh;
+  background-color: royalblue;
+}
+.additem{
+  width: 100%;
+  height: 100vh;
+  background-color: greenyellow;
+}
