--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ body{
 }
 .header{
   width: 100%;
-  height: 60px;
+  height: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -39,16 +39,76 @@ body{
   top: 25px;
   left: 0;
   right: 0;
-  background-color: white;
 }
-.logo{
-  width: 60px;
-  margin-left: 12px;
+.greeting{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-left: 16px;
 }
-.menu{
+.greetlogo{
+  width: 40px;
+  margin-right: 8px;
+  border-radius: 50%;
+  border: 1px solid royalblue;
+}
+.topgreet{
+  font-size: 12px;
+  font-weight: 500;
+  color: grey;
+}
+.bottomgreet{
+  font-size: 16px;
+  font-weight: 700;
+}
+.actions{
+  flex: 1;
+  height: 100%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+.menubuttonicon{
+  width: 15px;
+}
+.actionbutton{
   width: 25px;
-  margin-right: 20px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid rgb(191, 191, 191);
+  border-radius: 50%;
+  padding: 6px;
+  margin-right: 12px;
+  cursor: pointer;
 }
+.menupage{
+  width: 80%;
+  height: 100vh;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  bottom: 0;
+  background-color: #161616;
+}
+.menuopen{
+  transition: 0.3s;
+  right: 0;
+}
+.menuclose{
+  right: -100%;
+  transition: 0.3s;
+}
+.close{
+  cursor: pointer;
+}
+
+
+
+
+
+
 .bottombar {
   width: max-content;
   max-width: 400px;
@@ -63,7 +123,7 @@ body{
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  z-index: 1000;
+  z-index: 99;
 }
 .tab{
   display: flex;
