--- a/src/App.css
+++ b/src/App.css
@@ -84,13 +84,17 @@ body{
   cursor: pointer;
 }
 .menupage{
-  width: 80%;
+  width: 75%;
   height: 100vh;
   position: fixed;
   z-index: 100;
   top: 0;
   bottom: 0;
   background-color: #161616;
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: column;
 }
 .menuopen{
   transition: 0.3s;
@@ -102,8 +106,79 @@ body{
 }
 .close{
   cursor: pointer;
+  color: white;
 }
-
+.topmenubar{
+  width: 100%;
+  height: 50px;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+}
+.topmenubartag{
+  color: white;
+  font-size: 28px;
+  font-weight: 600;
+  margin-left: 20px;
+}
+.topmenubarbutton{
+  margin-right: 20px;
+  border: 1px solid grey;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4px;
+}
+.closebutton{
+  width: 15px;
+  filter: invert(1);
+}
+.menuitems{
+  margin-top: 40px;
+  width: 100%;
+  height: max-content;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+}
+.menuitem{
+  width: 80%;
+  height: 65px;
+  border-top: 1px solid rgba(128, 128, 128, 0.148);
+  border-bottom: 1px solid rgba(128, 128, 128, 0.148);
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+.itemicon{
+  width: 20px;
+  margin-right:20px ;
+}
+.itemtag{
+  color: grey;
+  font-size: 18px;
+  font-weight: 600;
+}
+.loggedintag{
+  width: 100%;
+  flex: 1;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+}
+.loggedininfo{
+  margin-bottom: 20px;
+  font-size: 14px;
+  font-weight: 600;
+  color: grey;
+}
 
 
 
