--- a/src/App.css
+++ b/src/App.css
@@ -351,7 +351,7 @@ body{
   height: auto;
   padding-bottom: 20px;
   background-color: rgb(243, 243, 243);
-  margin:0px;
+  margin:8px;
   border-radius: 12px;
   display: flex;
   justify-content: start;
@@ -376,10 +376,14 @@ body{
   border-radius: 8px;
 }
 .codename{
-  font-size: 12px;
+  width: 80%;
+  font-size: 10px;
   font-weight: 800;
   margin-top: 6px;
   margin-left: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .catname{
   font-size: 10px;
@@ -393,4 +397,17 @@ body{
   background-color: #161616;
   border-radius: 50%;
   margin-right: 8px;
+}
+.dwnbtn{
+  width: 24px;
+  height: 16px;
+  background-color: #161616;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+}
+.downloadbutton{
+  filter: invert(1);
+  width: 10px;
 }
