--- a/src/App.css
+++ b/src/App.css
@@ -328,10 +328,14 @@ body{
   margin-right: 4px;
 }
 .activecat{
+  padding-left: 22px;
+  padding-right: 22px;
+  transition: 0.3s;
   background-color: black;
   color: white;
 }
 .activecat .caticon{
+  transition: 0.3s;
   filter: invert(1);
 }
 .activecat .catcircle{
@@ -346,7 +350,7 @@ body{
   flex-wrap: wrap;
   margin-top: 20px;
 }
-.itemcard{
+/* .itemcard{
   width: 45%;
   height: auto;
   padding-bottom: 20px;
@@ -362,7 +366,6 @@ body{
 .iteminfo{
   width: 100%;
   flex: 1;
-  /* background-color: aqua; */
   display: flex;
   justify-content: center;
   align-items: start;
@@ -410,4 +413,108 @@ body{
 .downloadbutton{
   filter: invert(1);
   width: 10px;
+} */
+
+.itemcard {
+  position: relative;
+  width: 90%;
+  aspect-ratio: 1;
+  background-color: grey;
+  border-radius: 20px;
+  overflow: hidden;
+  margin: 8px;
 }
+
+.itemimage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* Overlay container */
+.overlay-top {
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  display: flex;
+  gap: 8px;
+  z-index: 2;
+}
+
+/* Pill styles */
+.pill {
+  background-color: rgba(0, 0, 0, 0.65);
+  padding: 6px 18px;
+  border-radius: 50px;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  backdrop-filter: blur(10px);
+}
+
+/* Bottom gradient overlay */
+.overlay-bottom {
+  position: absolute;
+  bottom: 0;
+  width: calc(100% - 48px);
+  padding: 24px;
+  background: linear-gradient(to top, rgba(0, 0, 0,0.9), transparent);
+  color: white;
+  font-size: 14px;
+  font-weight: 500;
+  z-index: 2;
+}
+.code{
+  font-size: 22px;
+  color: white;
+  font-weight: 800; 
+}
+.pricesection{
+  margin-top: 8px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.price{
+  width: 30%;
+  height: 45px;
+  background-color: rgba(0, 0, 0, 0.432);
+  backdrop-filter: blur(10px);
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  /* flex-direction: column; */
+}
+.priceamt{
+  color: white;
+  font-weight: 600;
+}
+.downloadicon{
+  width: 16px;
+  filter: invert(1);
+  margin-left: 6px;
+}
+/* .price{
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.pricetag{
+  font-size: 12px;
+  font-weight: 600;
+  color: white;
+}
+.pricebutton{
+  width: 30px;
+  height: 30px;
+  background-color: black;
+  border-radius: 50%;
+}
+.downloadbutton{
+  width: 16px;
+} */
