--- a/src/App.css
+++ b/src/App.css
@@ -368,12 +368,21 @@ body{
 }
 
 .overlay-top {
+  width:  calc(100% - 32px);
   position: absolute;
   top: 16px;
   left: 16px;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   gap: 8px;
   z-index: 2;
+}
+.pillsection{
+  width: max-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .pill {
@@ -384,6 +393,23 @@ body{
   font-weight: bold;
   color: white;
   backdrop-filter: blur(10px);
+  margin-right: 4px;
+}
+.editicon{
+  width: 12px;
+}
+.editsection{
+
+}
+.editbutton{
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.65);
+  backdrop-filter: blur(10px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .overlay-bottom {
