--- a/src/App.css
+++ b/src/App.css
@@ -348,7 +348,7 @@ body{
   margin-top: 20px;
 }
 
-.itemcard {
+/* .itemcard {
   position: relative;
   width: 90%;
   aspect-ratio: 1;
@@ -455,7 +455,7 @@ body{
 }
 
 
-
+ */
 
 /*Update Section Page*/
 .updateprice{
@@ -476,4 +476,114 @@ body{
   margin-top: 20px;
   margin-bottom: 20px;
   margin-left: 20px;
+}
+
+
+
+.itemcard{
+  padding-bottom: 12px;
+  padding-top: 12px;
+  width: calc(90%);
+  height: auto;
+  /* padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 12px;
+  padding-right: 12px; */
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  border-bottom: 1px solid rgba(205, 205, 205, 0.444);
+}
+.itemimage{
+  width: 110px;
+  height: 110px;
+  border-radius: 20px;
+}
+.iteminfo{
+  width: 100%;
+  flex: 1;
+  height: 110px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+}
+.first{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.editbutton{
+  width: 25px;
+  height: 25px;
+  background-color: royalblue;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 0px;
+}
+.editbuttonicon{
+  width: 10px;
+  filter: invert(0);
+}
+
+.pillsection{
+  margin-left: 8px;
+  width: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pillone,.pilltwo{
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  background-color: rgba(65, 105, 225, 0.308);
+  border-radius: 40px;
+  color: royalblue;
+  font-weight: 800;
+  margin: 2px;
+  font-size: 14px;
+}
+.codename{
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-left: 24px;
+  margin-top: 8px;
+  font-weight: 600;
+  font-size: 14px;
+  color: grey;
+}
+.pricessection{
+  margin-top: 12px;
+  width: calc(100% - 24px);
+  margin-left: 0px;
+  height: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.price{
+  width: 32%;
+  height: 30px;
+  background-color: #161616;
+  border-radius:8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.priceamt{
+  color: white;
+  font-size: 10px;
+  font-weight: 800;
+}
+.downloadicon{
+  filter: invert(1);
+  width: 12px;
+  margin-left: 4px;
 }
