--- a/src/App.css
+++ b/src/App.css
@@ -1264,8 +1264,6 @@ body{
 
 .updateprices-container {
   max-width: 100%;
-  margin: 1rem auto;
-  padding: 0.5rem 1rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #222;
@@ -1275,6 +1273,7 @@ body{
 }
 
 .updateprices-heading {
+  margin-left: 16px;
   font-size: 20px;
   margin-right: 12px;
   font-weight: 600;
@@ -1289,11 +1288,8 @@ body{
 
 .updateprices-category {
   background: #fff;
-  border: 1px solid #ddd;
-  border-radius: 6px;
-  padding: 0.75rem 1rem;
-  margin-bottom: 1rem;
-  box-shadow: 0 1px 3px rgba(0,0,0);
+  padding: 1rem 1rem;
+  border-bottom: 1px solid rgb(0, 0, 0);
 }
 
 .updateprices-category-header {
@@ -1327,7 +1323,7 @@ body{
 }
 
 .updateprices-items {
-  width: 100%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -1380,6 +1376,7 @@ body{
   width: 100%;
   position: sticky;
   top: 95px;
+  margin-bottom: 12px;
   background-color: white;
   height: 60px;
   display: flex;
@@ -1398,6 +1395,7 @@ body{
   justify-content: center;
   align-items: center;
   margin-left: 12px;
+  margin-right: 16px;
 }
 
 .updateprices-changed {
@@ -1534,3 +1532,6 @@ body{
   }
 }
 
+.additem-btn{
+  
+}
