--- a/src/App.css
+++ b/src/App.css
@@ -1289,7 +1289,8 @@ body{
 .updateprices-category {
   background: #fff;
   padding: 1rem 1rem;
-  border-bottom: 1px solid rgb(0, 0, 0);
+  margin-bottom: 20px;
+  /* border-bottom: 1px solid rgb(0, 0, 0); */
 }
 
 .updateprices-category-header {
@@ -1323,7 +1324,7 @@ body{
 }
 
 .updateprices-items {
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
