--- a/src/App.css
+++ b/src/App.css
@@ -792,6 +792,7 @@ body{
   width: 100%;
   margin-top: 20px;
   transition: background 0.2s ease;
+  /* margin-bottom: 100px; */
 }
 
 .addpage-button:hover {
@@ -1537,3 +1538,82 @@ body{
   word-wrap: break-word;
 }
 
+
+.additems-container {
+  width: calc(100% - 50px);
+  margin: 0 auto;
+  padding: 20px;
+  margin-top: 95px;
+  padding-bottom: 100px;
+}
+
+.additems-title {
+  text-align: center;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.additems-field {
+  margin-bottom: 15px;
+}
+
+.additems-label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: #555;
+}
+
+.additems-input {
+  width: calc(100% - 16px);
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.additems-materials {
+  margin-top: 20px;
+}
+
+.additems-subtitle {
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.additems-material-row {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.additems-button {
+  height: 40px;
+  padding: 10px 15px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.additems-button:hover {
+  background-color: #0056b3;
+}
+
+.additems-button-small {
+  padding: 8px 12px;
+  font-size: 14px;
+}
+
+.additems-material-list {
+  list-style-type: disc;
+  padding-left: 20px;
+}
+
+.additems-material-item {
+  margin-bottom: 5px;
+  color: #444;
+}
