--- a/src/App.css
+++ b/src/App.css
@@ -1617,3 +1617,60 @@ body{
   margin-bottom: 5px;
   color: #444;
 }
+
+
+
+.reminder-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.popup-content {
+  background: white;
+  padding: 20px 30px;
+  border-radius: 10px;
+  text-align: center;
+  max-width: 90%;
+  width: 300px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.popup-buttons {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.popup-buttons button {
+  padding: 8px 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  flex: 1;
+  font-weight: bold;
+}
+
+.popup-buttons button:first-child {
+  background-color: #cccccc;
+  color: #333;
+}
+
+.popup-buttons button:last-child {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.fincar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
