--- a/src/App.css
+++ b/src/App.css
@@ -1540,13 +1540,59 @@ body{
 
 
 .additems-container {
-  width: calc(100% - 50px);
-  margin: 0 auto;
-  padding: 20px;
+  width: calc(100%);
+  /* height: auto;
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: column; */
   margin-top: 95px;
   padding-bottom: 100px;
 }
-
+.additemheading{
+  font-size: 28px;
+  font-weight: 600;
+  color: black;
+  margin-top: 20px;
+  margin-left: 16px;
+  margin-bottom: 20px;
+}
+.additemheadingsmall{
+  font-size: 16px;
+  font-weight: 600;
+  color: grey;
+  margin-top: 20px;
+  margin-left: 16px;
+  margin-bottom: 20px;
+}
+.additemheadingsmall2{
+  min-width: 120px;
+  font-size: 14px;
+  font-weight: 600;
+  color: grey;
+  margin-top: 0px;
+  margin-left: 16px;
+  margin-bottom: 0px;
+}
+.grossweightsection{
+  width: 90%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 16px;
+  gap: 16px;
+}
+.grosswtinp{
+  width: 80px;
+  padding: 8px;
+  border: 1px solid grey;
+  border-radius: 4px;
+}
+.unit{
+  font-size: 14px;
+  font-weight: 600;
+}
 .additems-title {
   text-align: center;
   margin-bottom: 20px;
@@ -1555,11 +1601,13 @@ body{
 
 .additems-field {
   margin-bottom: 15px;
+  margin-left: 16px;
 }
 
 .additems-label {
+  font-size: 12px;
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 4px;
   font-weight: bold;
   color: #555;
 }
@@ -1569,6 +1617,8 @@ body{
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  font-weight: 600;
+  color: black;
 }
 
 .additems-materials {
@@ -1673,4 +1723,78 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+
+
+
+
+.itemsused-section {
+  margin-top: 1rem;
+  width: 90%;
+  margin-left: 16px;
+}
+.itemsused-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 0.5rem;
+}
+.item-name {
+  flex: 1;
+  font-size: 14px;
+  font-weight: 600;
+  color: black;
+}
+.item-qty-input {
+  width: 60px;
+  padding: 4px;
+  margin-top: 2px;
+}
+.unit {
+  margin-right: 8px;
+  margin-left: 8px;
+}
+.delete-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin-right: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.delicon{
+  width: 16px;
+}
+.item-total {
+  width: 80px;
+  font-weight: bold;
+}
+.additem-dropdown-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+.add-btn {
+  margin-left: 0.5rem;
+}
+
+.netwt{
+  width:calc(100% - 20px);
+  margin-right: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: min-content;
+  margin-top: 12px;
+}
+.netwtval{
+  font-size: 16px;
+  font-weight: 800;
+}
+.finprice{
+  width: 100px;
+  text-align: end;
 }
