--- a/src/App.css
+++ b/src/App.css
@@ -1550,7 +1550,7 @@ body{
   padding-bottom: 100px;
 }
 .additemheading{
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 600;
   color: black;
   margin-top: 20px;
@@ -1797,4 +1797,27 @@ body{
 .finprice{
   width: 100px;
   text-align: end;
+}
+
+
+/**/
+.buttonsectionaddpage{
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-left: 12px;
+}
+.savebutton{
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-bottom: 8px;
+  padding-top: 8px;
+  background-color: #0069d9;
+  border-radius: 4px;
+  margin: 4px;
+  color: white;
+  font-weight: 600;
+  font-size: 12px;
 }
