--- a/src/App.css
+++ b/src/App.css
@@ -240,11 +240,50 @@ body{
   align-items: center;
   flex-direction: column;
 }
+.searchdiv{
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: #0056b3; */
+}
+.searchinp{
+  width: 92%;
+  height: 50px;
+  background-color: rgb(245, 245, 245);
+  border-radius: 12px;
+  margin-top: 10px;
+  border: 1px solid rgb(174, 174, 174);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.searchicon{
+  width: 20px;
+  margin-left: 12px;
+  margin-right: 12px;
+}
+.searchinput{
+  display: flex;
+  flex: 1;
+  height: 60%;
+  margin-right: 20px;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  font-size: 16px;
+  color: black;
+  font-weight: 600;
+}
+.searchinput::placeholder{
+  font-size: 14px;
+  color: grey;
+}
 
 
 
-
-.searchbar{
+/* .searchbar{
   width: 95%;
   height: 50px;
   background-color: rgb(248, 248, 248);
@@ -300,7 +339,6 @@ body{
   padding-left: 12px;
   padding-top: 8px;
   padding-bottom: 8px;
-  /* background-color: #161616; */
   border-radius: 40px;
   border: 1px solid #d5d5d583;
   font-size: 14px;
@@ -342,7 +380,7 @@ body{
   align-items: center;
   flex-wrap: wrap;
   margin-top: 20px;
-}
+} */
 
 /* .itemcard {
   position: relative;
