--- a/src/App.css
+++ b/src/App.css
@@ -336,15 +336,141 @@ body{
 }
 .itemcard{
   width: 90%;
-  height: 100px;
+  height: 120px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(241, 241, 241);
+  /* flex-direction: column; */
+  /* background-color: rgb(241, 241, 241); */
+  border-radius: 20px;
+  margin-top: 24px;
+}
+.top{
+  width: 100%;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.first{
+  width: 120px;
+  height: 120px;
+  border-radius: 20px;
+  overflow: hidden;
+}
+.second{
+  display: flex;
+  flex: 1;
+  /* background-color: #0056b3; */
+  height: 100%;
+  justify-content: start;
+  align-items: start;
+  flex-direction: column;
+}
+.pillsection{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.pilldiv{
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-left: 8px;
+}
+.pill{
+  border: 1px solid #0056b3;
+  border-radius: 40px;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  font-size: 10px;
+  color: #0056b3;
+  background-color: #0057b323;
+  margin-left: 4px;
+  margin-right: 4px;
+}
+.editicon{
+  width: 12px;
+}
+.btn{
+  width: 24px;
+  height: 24px;
+  background-color: #0056b3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.productimage{
+  width: 120px;
+  height: 120px;
+  aspect-ratio: 1;
   border-radius: 20px;
 }
-
-
+.medium{
+  font-size: 14px;
+  font-weight: 600;
+  color: #000000;
+  margin-left: 16px;
+  margin-top: 8px;
+}
+.bottom{
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-wrap: wrap;
+  margin-top: 20px;
+}
+.downicon{
+  width: 10px;
+  filter: invert(1);
+}
+.dwnicon{
+  width: 20px;
+  height: 20px;
+  background-color: #111;
+  border-radius: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.dwntag{
+  font-size: 8px;
+  font-weight: 500;
+  margin-right: 4px;
+  margin-left: 8px;
+}
+.downloadbutton{
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ccc;
+  border-radius: 40px;
+  margin-left: 8px;
+  margin-right: 8px;
+  margin-top: 4px;
+}
+.sep{
+  width: 90%;
+  height:0.5px ;
+  background-color: #6666664a;
+  margin-top: 24px;
+  margin-top: 24px;
+}
+.comp{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
 
 /* .searchbar{
