--- a/src/App.css
+++ b/src/App.css
@@ -1517,8 +1517,9 @@ body{
 }
 
 .manageusers-button {
-  width: 100%;
-  padding: 0.5rem;
+  width: 30px;
+  height: 30px;
+  /* padding: 0.5rem; */
   background-color: #4caf50;
   color: white;
   font-weight: bold;
@@ -1635,7 +1636,7 @@ body{
 /* Popup buttons */
 .manageusers-popup-buttons {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin-top: 20px;
   gap: 10px;
 }
@@ -1666,7 +1667,8 @@ body{
 /* Buttons inside popup */
 .manageusers-button,
 .manageusers-button-cancel {
-  padding: 10px 16px;
+  width: 30px;
+  padding: 10px 10px;
   font-size: 14px;
   border: none;
   border-radius: 6px;
@@ -1675,6 +1677,8 @@ body{
 }
 
 .manageusers-button {
+  width: 30px;
+  height: 30px;
   background-color: #007bff;
   color: white;
 }
@@ -1798,6 +1802,11 @@ body{
   gap: 0.4rem;
   flex: 1;
   min-width: 140px;
+}
+.Q3{
+  min-width: 65px;
+  text-align: center;
+  gap: 0.4em;
 }
 
 .updateprices-input {
@@ -2477,4 +2486,20 @@ body{
   width: 90%;
   height: auto;
   border-radius: 20px;
+}
+
+.topheaderupd{
+  width:calc(100%);
+  height: 20px;
+  position: sticky;
+  top: 150px;
+  background-color: #fefefe;
+}
+.l1{
+  margin-left: 20px;
+}
+.Q3{
+  font-size: 10px;
+  font-weight: 500;
+  color: black;
 }
